--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,8 +5,10 @@
   <%- include ("../components/header.ejs") %>
 </head>
 
-<body class="white">
-  <img src="/img/dvlcube.jpg">
+<body class="white" style="display:flex;align-items:center;justify-content:center;min-height:100vh;">
+  <a href="/tools">
+    <img src="/img/dvlcube.jpg" alt="dvlcube">
+  </a>
 </body>
 
 </html>
