--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,6 +3,8 @@
 
 <head>
   <%- include ("../components/header.ejs") %>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8956595286308525"
+     crossorigin="anonymous"></script>
 </head>
 
 <body class="white" style="display:flex;align-items:center;justify-content:center;min-height:100vh;">
